force-app/main/default/objects/Visitas__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes de visita</relationshipLabel>
    <relationshipName>Solicitudes_de_visita</relationshipName>
    <type>Lookup</type>
</CustomField>