force-app/main/default/objects/Visitas__c/fields/Descripcion_de_la_visita__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_la_visita__c</fullName>
    <label>Descripcion de la visita</label>
    <type>TextArea</type>
</CustomField>