force-app/main/default/objects/Visitas__c/fields/Detalle_y_objetivo_de_la_visita__c.field-meta.xml
<CustomField>
    <fullName>Detalle_y_objetivo_de_la_visita__c</fullName>
    <label>Detalle y objetivo de la visita</label>
    <type>TextArea</type>
</CustomField>