force-app/main/default/objects/Visitas__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Direccion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>