force-app/main/default/objects/Visitas__c/fields/Division_de_la_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Division_de_la_solicitud__c</fullName>
    <formula>Owner:User.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division de la solicitud</label>
    <type>Text</type>
</CustomField>