force-app/main/default/objects/Visitas__c/fields/Duracion_de_la_Visita__c.field-meta.xml
<CustomField>
    <fullName>Duracion_de_la_Visita__c</fullName>
    <formula>(FLOOR(( Fecha_y_hora_fin_de_la_visita__c -   Fecha_y_hora_inicio_de_la_visita__c ) * 24)) + 
((MOD((Fecha_y_hora_fin_de_la_visita__c - Fecha_y_hora_inicio_de_la_visita__c ) * 1440, 60)) / 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duracion de la Visita (Horas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>