force-app/main/default/objects/Visitas__c/fields/Estado_de_la_visita__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_la_visita__c</fullName>
    <label>Estado de la visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enviar a aprobación</fullName>
                <default>true</default>
                <label>Enviar a aprobación</label>
            </value>
            <value>
                <fullName>Pendiente de aprobación</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
            <value>
                <fullName>Cerrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>