force-app/main/default/objects/Visitas__c/fields/Fecha_de_la_visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_visita__c</fullName>
    <label>Fecha de la visita</label>
    <type>Date</type>
</CustomField>