force-app/main/default/objects/Visitas__c/fields/Fecha_Inicio_de_visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_de_visita__c</fullName>
    <formula>DATEVALUE(Fecha_y_hora_inicio_de_la_visita__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Inicio de visita</label>
    <type>Date</type>
</CustomField>