force-app/main/default/objects/Visitas__c/fields/Fecha_y_hora_inicio_de_la_visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_hora_inicio_de_la_visita__c</fullName>
    <label>Fecha y hora inicio de la visita</label>
    <type>DateTime</type>
</CustomField>