force-app/main/default/objects/Visitas__c/fields/Hora_Fin_de_la_Visita__c.field-meta.xml
<CustomField>
    <fullName>Hora_Fin_de_la_Visita__c</fullName>
    <formula>TIMEVALUE(DATETIMEVALUE(Fecha_y_hora_fin_de_la_visita__c) -  (3/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora Fin de la Visita</label>
    <type>Time</type>
</CustomField>