force-app/main/default/objects/Visitas__c/fields/Linea_de_productos__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_productos__c</fullName>
    <label>Línea de productos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motores</fullName>
            </value>
            <value>
                <fullName>Automatización</fullName>
            </value>
            <value>
                <fullName>Accionamientos</fullName>
            </value>
            <value>
                <fullName>Transmisión de potencia</fullName>
            </value>
            <value>
                <fullName>Equipos de levante</fullName>
            </value>
            <value>
                <fullName>Proyectos Integración</fullName>
            </value>
            <value>
                <fullName>Proyectos Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>