force-app/main/default/objects/Visitas__c/fields/Logistica_para_la_visita__c.field-meta.xml
<CustomField>
    <fullName>Logistica_para_la_visita__c</fullName>
    <label>Logistica para la visita</label>
    <type>TextArea</type>
</CustomField>