force-app/main/default/objects/Visitas__c/fields/Minuta_de_visita__c.field-meta.xml
<CustomField>
    <fullName>Minuta_de_visita__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minuta de visita</label>
    <type>Checkbox</type>
</CustomField>