force-app/main/default/objects/Visitas__c/fields/Nombre_del_contacto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_contacto__c</fullName>
    <label>Nombre del contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>