force-app/main/default/objects/Visitas__c/fields/Paso_por_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Paso_por_aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paso por aprobacion</label>
    <type>Checkbox</type>
</CustomField>