force-app/main/default/objects/Visitas__c/fields/Recurso_del_rea_de_Productos__c.field-meta.xml
<CustomField>
    <fullName>Recurso_del_rea_de_Productos__c</fullName>
    <label>Recurso del Área de Productos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visita Técnica (levantamiento en terreno y/o reunión aclaratoria)</fullName>
            </value>
            <value>
                <fullName>Capacitación (entrenamiento técnico especifico de alguna línea de</fullName>
            </value>
            <value>
                <fullName>producto)</fullName>
            </value>
            <value>
                <fullName>Presentación de Productos (apoyar al vendedor en su presentación</fullName>
            </value>
            <value>
                <fullName>comercial)</fullName>
            </value>
            <value>
                <fullName>Presentación de Proyectos (Control e integración)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>