force-app/main/default/objects/Visitas__c/fields/Requiere_EPP__c.field-meta.xml
<CustomField>
    <fullName>Requiere_EPP__c</fullName>
    <label>¿EPP’s o exámenes especiales? Cuales:</label>
    <type>TextArea</type>
</CustomField>